--- a/ComePenny/app/src/main/AndroidManifest.xml
+++ b/ComePenny/app/src/main/AndroidManifest.xml
@@ -2,6 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.enterpaper.comepenny" >
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+
+    <permission android:name="com.enterpaper.comepenny.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
+    <uses-permission android:name="com.enterpaper.comepenny.permission.C2D_MESSAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,6 +19,19 @@
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name" >
+
+        </activity>
+
+        <activity android:name=".activity.MyInfoActivity">
+        </activity>
+
+        <activity android:name=".activity.SettingActivity">
+        </activity>
+
+        <activity android:name=".activity.WriteActivity">
+        </activity>
+
+        <activity android:name=".activity.LoadingActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
