idea thumbnail, idea detail

--- a/ComePenny/app/src/main/AndroidManifest.xml
+++ b/ComePenny/app/src/main/AndroidManifest.xml
@@ -41,6 +41,9 @@
 
         <activity android:name=".activity.BoothDetailActivity">
         </activity>
+
+        <activity android:name=".activity.IdeaDetailActivity">
+        </activity>
     </application>
 
 </manifest>
