--- a/ComePenny/app/build.gradle
+++ b/ComePenny/app/build.gradle
@@ -24,4 +24,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.melnykov:floatingactionbutton:1.3.0'
     compile 'com.google.android.gms:play-services:8.1.0'
+    compile project(':picasso-2.3.4')
+    compile 'com.android.support:recyclerview-v7:23.0.1'
+    compile 'com.android.support:cardview-v7:23.0.1'
 }
