--- a/ComePenny/app/src/main/AndroidManifest.xml
+++ b/ComePenny/app/src/main/AndroidManifest.xml
@@ -17,21 +17,21 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".activity.MainActivity"
+            android:name=".activities.MainActivity"
             android:label="@string/app_name" >
 
         </activity>
 
-        <activity android:name=".activity.MyInfoActivity">
+        <activity android:name=".activities.MyInfoActivity">
         </activity>
 
-        <activity android:name=".activity.SettingActivity">
+        <activity android:name=".activities.SettingActivity">
         </activity>
 
-        <activity android:name=".activity.WriteActivity">
+        <activity android:name=".activities.WriteActivity"  android:windowSoftInputMode="adjustPan">
         </activity>
 
-        <activity android:name=".activity.LoadingActivity">
+        <activity android:name=".activities.LoadingActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -39,10 +39,10 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".activity.BoothDetailActivity">
+        <activity android:name=".tab.t2booth.BoothDetailActivity">
         </activity>
 
-        <activity android:name=".activity.IdeaDetailActivity">
+        <activity android:name=".tab.t1idea.IdeaDetailActivity">
         </activity>
     </application>
 
