회원가입페이지 로그인페이지 추가 로그아웃구현 회원가입서버연동

--- a/ComePenny/app/src/main/AndroidManifest.xml
+++ b/ComePenny/app/src/main/AndroidManifest.xml
@@ -36,6 +36,12 @@
 
         <activity android:name=".tab.t1idea.IdeaDetailActivity">
         </activity>
+
+        <activity android:name=".activities.LoginActivity" android:windowSoftInputMode="stateHidden">
+        </activity>
+
+        <activity android:name=".activities.SignUpActivity" android:windowSoftInputMode="stateHidden">
+        </activity>
     </application>
 
 </manifest>
