--- a/ComePenny/app/build.gradle
+++ b/ComePenny/app/build.gradle
@@ -23,7 +23,13 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.melnykov:floatingactionbutton:1.3.0'
-    compile 'com.google.android.gms:play-services:8.1.0'
     compile 'com.android.support:recyclerview-v7:23.0.1'
     compile 'com.android.support:cardview-v7:23.0.1'
+    compile 'org.apache.james:apache-mime4j:0.7.2'
+    compile 'org.apache.httpcomponents:httpmime:4.5.1'
+}
+
+configurations {
+    all*.exclude group: 'commons-logging', module: 'commons-logging'
+    all*.exclude group: 'org.apache.httpcomponents', module: 'httpclient'
 }
