--- a/ComePenny/app/build.gradle
+++ b/ComePenny/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.0.1'
     compile 'org.apache.james:apache-mime4j:0.7.2'
     compile 'org.apache.httpcomponents:httpmime:4.5.1'
+    compile files('lib/universal-image-loader-1.9.4.jar')
 }
 
 configurations {
