--- a/ComePenny/app/src/main/AndroidManifest.xml
+++ b/ComePenny/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.enterpaper.comepenny" >
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,38 +12,48 @@
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/app_name" >
-
         </activity>
-
-        <activity android:name=".activities.MyInfoActivity">
+        <activity android:name=".activities.MyInfoActivity" >
         </activity>
         IdeaFragment
-        <activity android:name=".activities.SettingActivity">
+        <activity android:name=".activities.SettingActivity" >
         </activity>
-        <activity android:name=".activities.WriteBoothActivity">
+        <activity android:name=".activities.WriteBoothActivity" >
         </activity>
-        <activity android:name=".activities.WriteActivity"  android:windowSoftInputMode="adjustPan">
+        <activity
+            android:name=".activities.WriteActivity"
+            android:windowSoftInputMode="adjustPan" >
         </activity>
-
-        <activity android:name=".activities.LoadingActivity">
+        <activity android:name=".activities.LoadingActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".tab.t2booth.BoothDetailActivity">
+        <activity android:name=".tab.t2booth.BoothDetailActivity" >
+        </activity>
+        <activity android:name=".tab.t1idea.IdeaDetailActivity" >
         </activity>
 
-        <activity android:name=".tab.t1idea.IdeaDetailActivity">
-        </activity>
-        <fragement android:name=".tab.t1idea.IdeaFragment">
+        <fragement android:name=".tab.t1idea.IdeaFragment" >
         </fragement>
-        <activity android:name=".activities.LoginActivity" android:windowSoftInputMode="stateHidden">
-        </activity>
 
-        <activity android:name=".activities.SignUpActivity" android:windowSoftInputMode="stateHidden">
+        <activity
+            android:name=".activities.LoginActivity"
+            android:windowSoftInputMode="stateHidden" >
+        </activity>
+        <activity
+            android:name=".activities.SignUpActivity"
+            android:windowSoftInputMode="stateHidden" >
+        </activity>
+        <activity
+            android:name=".activities.MyinfoLikeFragment"
+            android:label="@string/title_activity_myinfo_like_fragment" >
+        </activity>
+        <activity
+            android:name=".activities.MyinfoWriteFragment"
+            android:label="@string/title_activity_myinfo_write_fragment" >
         </activity>
     </application>
 
