--- a/ComePenny/app/src/main/AndroidManifest.xml
+++ b/ComePenny/app/src/main/AndroidManifest.xml
@@ -1,60 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.enterpaper.comepenny" >
+    package="com.enterpaper.comepenny">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
+
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".activities.MainActivity"
-            android:label="@string/app_name" >
-        </activity>
-        <activity android:name=".activities.MyInfoActivity" >
-        </activity>
+            android:label="@string/app_name"></activity>
+
+        <activity android:name=".activities.MyInfoActivity"></activity>
         IdeaFragment
-        <activity android:name=".activities.SettingActivity" >
-        </activity>
-        <activity android:name=".activities.WriteBoothActivity" >
-        </activity>
+        <activity android:name=".activities.SettingActivity"></activity>
+        <activity android:name=".activities.WriteBoothActivity"></activity>
         <activity
             android:name=".activities.WriteActivity"
-            android:windowSoftInputMode="adjustPan" >
-        </activity>
-        <activity android:name=".activities.LoadingActivity" >
+            android:windowSoftInputMode="adjustPan"></activity>
+        <activity android:name=".activities.LoadingActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".tab.t2booth.BoothDetailActivity" >
-        </activity>
-        <activity android:name=".tab.t1idea.IdeaDetailActivity" >
-        </activity>
+        <activity android:name=".tab.t2booth.BoothDetailActivity"></activity>
+        <activity android:name=".tab.t1idea.IdeaDetailActivity"></activity>
 
-        <fragement android:name=".tab.t1idea.IdeaFragment" >
-        </fragement>
+        <fragement android:name=".tab.t1idea.IdeaFragment"></fragement>
 
         <activity
             android:name=".activities.LoginActivity"
-            android:windowSoftInputMode="stateHidden" >
-        </activity>
+            android:windowSoftInputMode="stateHidden"></activity>
         <activity
             android:name=".activities.SignUpActivity"
-            android:windowSoftInputMode="stateHidden" >
-        </activity>
+            android:windowSoftInputMode="stateHidden"></activity>
         <activity
             android:name=".activities.MyinfoLikeFragment"
-            android:label="@string/title_activity_myinfo_like_fragment" >
-        </activity>
+            android:label="@string/title_activity_myinfo_like_fragment"></activity>
         <activity
             android:name=".activities.MyinfoWriteFragment"
-            android:label="@string/title_activity_myinfo_write_fragment" >
-        </activity>
+            android:label="@string/title_activity_myinfo_write_fragment"></activity>
+        <activity
+            android:name=".util.ApplicationClass"
+            android:allowBackup="true" />
     </application>
 
 </manifest>
