--- a/ComePenny/app/src/main/AndroidManifest.xml
+++ b/ComePenny/app/src/main/AndroidManifest.xml
@@ -5,9 +5,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name="com.enterpaper.comepenny.util.ApplicationClass"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
@@ -15,7 +15,6 @@
             android:label="@string/app_name"></activity>
 
         <activity android:name=".activities.MyInfoActivity"></activity>
-        IdeaFragment
         <activity android:name=".activities.SettingActivity"></activity>
         <activity android:name=".activities.WriteBoothActivity"></activity>
         <activity
@@ -39,15 +38,7 @@
         <activity
             android:name=".activities.SignUpActivity"
             android:windowSoftInputMode="stateHidden"></activity>
-        <activity
-            android:name=".activities.MyinfoLikeFragment"
-            android:label="@string/title_activity_myinfo_like_fragment"></activity>
-        <activity
-            android:name=".activities.MyinfoWriteFragment"
-            android:label="@string/title_activity_myinfo_write_fragment"></activity>
-        <activity
-            android:name=".util.ApplicationClass"
-            android:allowBackup="true" />
+
     </application>
 
 </manifest>
