아이디어수정하기

--- a/ComePenny/app/src/main/AndroidManifest.xml
+++ b/ComePenny/app/src/main/AndroidManifest.xml
@@ -39,6 +39,8 @@
         <activity
             android:name=".activities.SignUpActivity"
             android:windowSoftInputMode="stateHidden"></activity>
+        <activity
+            android:name=".activities.AdjustWriteActivity"></activity>
 
     </application>
 
