--- a/ComePenny/settings.gradle
+++ b/ComePenny/settings.gradle
@@ -1,1 +1,1 @@
-include ':apache-mime4j-0.6', ':httpclient-4.1.2', ':httpmime-4.1.2', ':app', ':picasso-2.3.4'
+include ':apache-mime4j-0.6', ':httpclient-4.1.2', ':httpmime-4.1.2', ':app', ':picasso-2.3.4', ':gcm'
