--- a/ComePenny/app/src/main/AndroidManifest.xml
+++ b/ComePenny/app/src/main/AndroidManifest.xml
@@ -1,48 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.enterpaper.comepenny"
-    android:versionCode = "2"
-    android:versionName = "1.0.1">
+    android:versionCode="2"
+    android:versionName="1.0.1">
 
-<uses-permission android:name="android.permission.INTERNET" /><uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /><uses-permission android:name="android.intent.action.MEDIA_MOUNTED" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.intent.action.MEDIA_MOUNTED" />
+    <!-- GCM requires a Google account. -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+
+    <!-- Keeps the processor from sleeping when a message is received. -->
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
+    <!--
+     Creates a custom permission so only this app can receive its messages.
+
+     NOTE: the permission *must* be called PACKAGE.permission.C2D_MESSAGE,
+           where PACKAGE is the application's package name.
+    -->
+    <permission android:name="com.enterpaper.comepenny.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
+    <uses-permission android:name="com.enterpaper.comepenny.permission.C2D_MESSAGE" />
+
+    <!-- This app has permission to register and receive data message. -->
+    <uses-permission
+        android:name="com.google.android.c2dm.permission.RECEIVE" />
 
 
-<application
-android:name="com.enterpaper.comepenny.util.ApplicationClass"
-android:allowBackup="true"
-android:icon="@mipmap/homo_appicon"
-android:label="호모띵쿠스"
-android:theme="@style/AppTheme">
-<activity
-    android:name=".activities.MainActivity"
-    android:label="@string/app_name"></activity>
+    <application
+        android:name="com.enterpaper.comepenny.util.ApplicationClass"
+        android:allowBackup="true"
+        android:icon="@mipmap/homo_appicon"
+        android:label="호모띵쿠스"
+        android:theme="@style/AppTheme">
 
-<activity android:name=".activities.MyInfoActivity"></activity>
-<activity android:name=".activities.SettingActivity"></activity>
-<activity android:name=".activities.WriteBoothActivity"></activity>
-<activity
-    android:name=".activities.WriteActivity"
-    android:windowSoftInputMode="adjustPan"></activity>
-<activity android:name=".activities.LoadingActivity">
-    <intent-filter>
-        <action android:name="android.intent.action.MAIN" />
+        <meta-data android:name="com.google.android.gms.version"
+        android:value="@integer/google_play_services_version" />
 
-        <category android:name="android.intent.category.LAUNCHER" />
-    </intent-filter>
-</activity>
-<activity android:name=".tab.t2booth.BoothDetailActivity"></activity>
-<activity android:name=".tab.t1idea.IdeaDetailActivity"></activity>
 
-<fragement android:name=".tab.t1idea.IdeaFragment"></fragement>
+        <receiver
+            android:name=".util.GcmBroadcastReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+                <!-- Receives the actual messages. -->
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <category android:name="com.google.android.gcm.demo.app" />
+            </intent-filter>
+        </receiver>
+        <service android:name=".util.GcmIntentService" />
 
-<activity
-    android:name=".activities.LoginActivity"
-    android:windowSoftInputMode="stateHidden"></activity>
-<activity
-    android:name=".activities.SignUpActivity"
-    android:windowSoftInputMode="stateHidden"></activity>
-<activity android:name=".activities.AdjustWriteActivity"></activity>
 
-</application>
 
-    </manifest>
+
+        <activity
+            android:name="com.enterpaper.comepenny.activities.MainActivity"
+            android:label="@string/app_name"></activity>
+
+        <activity android:name=".activities.MyInfoActivity"></activity>
+        <activity android:name=".activities.SettingActivity"></activity>
+        <activity android:name=".activities.WriteBoothActivity"></activity>
+        <activity
+            android:name=".activities.WriteActivity"
+            android:windowSoftInputMode="adjustPan"></activity>
+        <activity android:name=".activities.LoadingActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".tab.t2booth.BoothDetailActivity"></activity>
+        <activity android:name=".tab.t1idea.IdeaDetailActivity"></activity>
+
+        <fragement android:name=".tab.t1idea.IdeaFragment"></fragement>
+
+        <activity
+            android:name=".activities.LoginActivity"
+            android:windowSoftInputMode="stateHidden"></activity>
+        <activity
+            android:name=".activities.SignUpActivity"
+            android:windowSoftInputMode="stateHidden"></activity>
+        <activity android:name=".activities.AdjustWriteActivity"></activity>
+
+    </application>
+
+</manifest>
