line정리, 텍스트 공유받기 구현

--- a/ComePenny/app/src/main/AndroidManifest.xml
+++ b/ComePenny/app/src/main/AndroidManifest.xml
@@ -22,7 +22,20 @@
 
         <activity android:name=".activities.MyInfoActivity"></activity>
         <activity android:name=".activities.SettingActivity"></activity>
-        <activity android:name=".activities.WriteBoothActivity"></activity>
+
+        <activity android:name=".activities.WriteBoothActivity">
+            <!--
+            텍스트 공유
+            -->
+            <intent-filter>
+               <action android:name="android.intent.action.SEND" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:mimeType="text/*" />
+            </intent-filter>
+
+        </activity>
+
+
         <activity
             android:name=".activities.WriteActivity"
             android:windowSoftInputMode="adjustPan"></activity>
