--- a/ComePenny/app/src/main/AndroidManifest.xml
+++ b/ComePenny/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.enterpaper.comepenny"
     android:versionCode="4"
     android:versionName="1.0.2">
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+    <uses-permission android:name="com.google.android.providers.gsf.permission.WRITE_GSERVICES"/>
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
