--- a/ComePenny/app/build.gradle
+++ b/ComePenny/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.enterpaper.comepenny"
         minSdkVersion 15
         targetSdkVersion 22
-        versionCode 4
-        versionName "1.0.2"
+        versionCode 5
+        versionName "1.1.0"
     }
     buildTypes {
         release {
@@ -50,6 +50,8 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.0.1'
     compile files('lib/universal-image-loader-1.9.4.jar')
     compile project(':httpmime-4.1.2')
+    compile project(':jsoup-1.7.3')
+    compile project(':MarketVersionChecker')
 }
 
 configurations {
