--- a/ComePenny/app/src/main/AndroidManifest.xml
+++ b/ComePenny/app/src/main/AndroidManifest.xml
@@ -3,12 +3,29 @@
     package="com.enterpaper.comepenny"
     android:versionCode="4"
     android:versionName="1.0.2">
-    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
-    <uses-permission android:name="com.google.android.providers.gsf.permission.WRITE_GSERVICES"/>
 
+    <permission
+        android:name="com.enterpaper.comepenny.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="com.enterpaper.comepenny.permission.C2D_MESSAGE" />
+    <!-- App receives GCM messages. -->
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <!-- GCM connects to Google Services. -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <!-- GCM requires a Google account. -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <!-- Keeps the processor from sleeping when a message is received. -->
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.GET_TASKS" />
+
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.WRITE_GSERVICES" />
+
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.intent.action.MEDIA_MOUNTED" />
+
     <protected-broadcast android:name="android.intent.action.MEDIA_MOUNTED" />
 
 
@@ -18,6 +35,22 @@
         android:icon="@mipmap/homo_appicon"
         android:label="호모띵쿠스"
         android:theme="@style/AppTheme">
+
+        <receiver
+            android:name=".util.GcmBroadcastReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+
+                <category android:name="com.enterpaper.comepenny" />
+            </intent-filter>
+        </receiver>
+
+        <service android:name=".util.GCMIntentService" />
+
+
+
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/app_name"></activity>
@@ -30,7 +63,7 @@
             텍스트 공유
             -->
             <intent-filter>
-               <action android:name="android.intent.action.SEND" />
+                <action android:name="android.intent.action.SEND" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <data android:mimeType="text/*" />
             </intent-filter>
