--- a/ComePenny/settings.gradle
+++ b/ComePenny/settings.gradle
@@ -1,1 +1,1 @@
-include ':httpclient-4.1.2', ':httpmime-4.1.2', ':picasso-2.3.4', ':apache-mime4j-0.6', ':app', ':jsoup-1.7.3', ':MarketVersionChecker'
+include ':httpclient-4.1.2', ':httpmime-4.1.2', ':picasso-2.3.4', ':apache-mime4j-0.6', ':app', ':jsoup-1.7.3', ':MarketVersionChecker', ':gcm'
