--- a/ComePenny/app/build.gradle
+++ b/ComePenny/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.enterpaper.comepenny"
         minSdkVersion 15
         targetSdkVersion 22
-        versionCode 5
-        versionName "1.1.0"
+        versionCode 6
+        versionName "1.1.1"
     }
     buildTypes {
         release {
@@ -49,18 +49,14 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.0.1'
     compile 'com.android.support:cardview-v7:23.0.1'
     compile files('lib/universal-image-loader-1.9.4.jar')
-    compile project(':httpmime-4.1.2')
     compile project(':jsoup-1.7.3')
     compile project(':MarketVersionChecker')
     compile project(':gcm')
-
-    compile 'com.google.android.gms:play-services:8.3.0'
-
+    compile 'com.google.android.gms:play-services:3.1.+'
     compile files('lib/FlurryAnalytics-6.2.0.jar')
-
-
     configurations {
         all*.exclude group: 'commons-logging', module: 'commons-logging'
         all*.exclude group: 'org.apache.httpcomponents', module: 'httpclient'
     }
+    compile project(':httpmime-4.1.2')
 }
