--- a/ComePenny/settings.gradle
+++ b/ComePenny/settings.gradle
@@ -1,1 +1,1 @@
-include ':gcm', ':MarketVersionChecker', ':apache-mime4j-0.6', ':app', ':httpclient-4.1.2', ':httpmime-4.1.2', ':jsoup-1.7.3'
+include ':gcm', ':MarketVersionChecker', ':apache-mime4j-0.6', ':app', ':httpclient-4.1.2', ':jsoup-1.7.3', ':httpmime-4.1.2'
