갖은 버그 해결

--- a/ComePenny/app/src/main/AndroidManifest.xml
+++ b/ComePenny/app/src/main/AndroidManifest.xml
@@ -84,7 +84,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".tab.t2booth.BoothDetailActivity"></activity>
-        <activity android:name=".tab.t1idea.IdeaDetailActivity"></activity>
+        <activity android:name=".tab.t1idea.IdeaDetailActivity"
+            android:windowSoftInputMode="adjustPan"></activity>
 
         <fragement android:name=".tab.t1idea.IdeaFragment"></fragement>
 
